1999-11-02  Katsumi Yamaoka   <yamaoka@jpl.org>

	* poe-18.el (add-text-properties, get-text-property): Define as
	null function.
	(file-executable-p): New function.


1999-10-22  Katsumi Yamaoka   <yamaoka@jpl.org>

	* APEL: Version 9.23 released.

1999-10-22  Katsumi Yamaoka   <yamaoka@jpl.org>

	* APEL-MK (compile-apel-package): Compile `emu-modules-to-compile'
	instead of `emu-modules'.
	(compile-apel): Likewise.

	* EMU-ELS (emu-modules-to-compile): New variable which is used for
	compiling in APEL-MK.  If the feature `utf-2000' is provided,
	`mcs-xmu' is removed from its value even if `emu-modules' contains
	it.
	(emu-modules-not-to-compile): New variable.

	* mcs-xm.el (mime-iso646-character-unification-alist): Move to
	mcs-xmu.el.
	(mime-unified-character-face): Move to mcs-xmu.el.
	(mime-character-unification-limit-size): Move to mcs-xmu.el.
	(decode-mime-charset-region-with-iso646-unification): Move to
	mcs-xmu.el.

	* mcs-xmu.el: New file.

1999-10-22  Katsumi Yamaoka   <yamaoka@jpl.org>

	* EMU-ELS (pces-modules): Don't check for the feature `mule'
	whether `pces-xfc' is required.
	* pces.el: Likewise.

	* mcs-xm.el: (decode-mime-charset-region-with-iso646-unification):
	Narrow to the region while decoding; bind `case-fold-search' to nil.
	(mime-character-unification-limit-size): Make it can also be nil
	which means the size is unlimited.

1999-10-14  Mikio Nakajima    <minakaji@osaka.email.ne.jp>

	* mcs-xm.el (decode-mime-charset-region-with-iso646-unification):
	Don't put `mime-unified-character-face' to unified text if it is
	nil.
	(mime-character-unification-limit-size): Fix doc string.

1999-10-13  Katsumi Yamaoka   <yamaoka@jpl.org>

	* poe.el (file-coding): Provide it for XEmacs 20.4 or earlier with
	MULE.

1999-10-13  Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* EMU-ELS (pces-modules): Add `pces-raw' if file-coding feature is
	not available in a XEmacs-without-MULE.

	* pces.el: Require `pces-raw' if file-coding feature is	not